--- a/template/index.html
+++ b/template/index.html
@@ -1,44 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
-        <meta name="description" content="lanqy 在这里写作"/>
-        <link href="/css/style.css" rel="stylesheet" />
-        <title>{{siteName}}</title>
-        <link rel="alternate" href="/atom.xml" type="application/rss+xml" title="让思绪停留在这里"/>
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <title>{{siteName}}</title>
+</head>
+
+<body>
+    <div>
         <div>
-            <div>
-                <header class="header">
-                    <div class="container header-wrap">
-                        <h1 class="site-name">
-                            <a href="/">
-                                首页
-                            </a>
-                        </h1> 
-                        <ul class="nav">
-                            <li class="nav-item">
-                                <a href="/about">关于</a>
-                            </li>
-                        </ul>
-                    </div>
-                </header>
-            </div>        
-            <div class="post-list">
-                {{lists}}
-            </div>
-            <footer class="container footer">
-                <div class="centered">
-                    <span>2018 ~ </span> 
-                    <span>©</span> 
-                    <span>
-                        lanqy
-                    </span>
+            <header class="header">
+                <div class="container header-wrap">
+                    <h1 class="site-name">
+                        <a href="/">
+                            首页
+                        </a>
+                    </h1>
+                    <ul class="nav">
+                        {{navs}}
+                    </ul>
                 </div>
-            </footer>
+            </header>
         </div>
-    </body>
+        <div class="post-list">
+            {{lists}}
+        </div>
+    </div>
+</body>
+
 </html>
